Archive2/aa/20c93fda064c89/output
main.cpp: In member function 'virtual void MovementSystem<EntityManager>::Update(EntityManager&, double)':
main.cpp:24:5: error: 'Component' was not declared in this scope
     Component<int> position_component; // I'd like to use Component<T> here.
     ^
main.cpp:24:15: error: expected primary-expression before 'int'
     Component<int> position_component; // I'd like to use Component<T> here.
               ^
